[project]
name = "kv-cache-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Wallace", email = "john.wallace08@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.scripts]
kv-cache-sim = "kv_cache_sim:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff.lint]
select = ["ALL",]
ignore = ["COM812", "D"]

[tool.ruff.lint.isort]
known-first-party = ["kv_cache_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
